@@ -405,6 +405,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #7069: Make inspect.isabstract() return a boolean.
+
 - Add support to the `ihooks` module for relative imports.
 
 - Issue #6894: Fixed the issue urllib2 doesn't respect "no_proxy" environment 
